Release flow make intuitive (#78)
* Rework release flow BE + FE

* remove make live on save

* add logs on errors

* improve live panel ui

* defensive

* change pattern

* nits

* remove log from error, keep in middleware
